--- a/index.html
+++ b/index.html
@@ -142,6 +142,59 @@
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container">
+<p><a href="https://images.app.goo.gl/i7kSANsTBs292aBf6">Infografia 1</a></p>
+<h2 id="elecciones-26j">Elecciones 26J</h2>
+<p>En la presente infograf├¡a, publicada en la p├ígina web de la Agencia EFE, se recogen los datos relativos a las <strong>elecciones generales del 26 de junio de 2016</strong>. En ├®l se mues
+tra una explicaci├│n detallada del sistema electoral espa├▒ol y una serie de gr├íficos que permiten una mejor comprensi├│n de este fen├│meno. Al principio, se aporta la informaci├│n relativa a
+ este sistema para, m├ís adelante, haciendo uso de <strong>gr├íficos de barras</strong> y utilizando esferas de cantidades en las distintas ├íreas geogr├íficas de Espa├▒a, dar a conocer los es
+ca├▒os que corresponden a cada circunscripci├│n y los representantes por comunidades aut├│nomas, tanto en el <strong>Congreso</strong> como en el <strong>Senado</strong>. Una nueva imagen de a
+mbos hemicilos, que diferencia mediante c├¡rculos de color a los partidos pol├¡ticos, nos da la cifra de representantes de cada partido. Adem├ís hacen uso de las im├ígenes de los presidentes d
+e ambas c├ímaras, <strong>Patxi L├│pez</strong> y <strong>Pio Garc├¡a-Escudero</strong>. Bajo ellos, las cifras de representantes con las que cuenta cada partido en cada una de las c├ímaras. A
+ continuaci├│n, y como final de la infograf├¡a, se aporta una <strong>cronolog├¡a</strong> de lo que ser├ín las elecciones, con explicaciones pormenorizadas de cada fecha. Se trata de una info
+graf├¡a que resulta bastante ├║til para entender el sistema espa├▒ol y la <strong>situaci├│n de la pol├¡tica</strong> en el pa├¡s. Adem├ís, hace uso de varios formatos visuales, lo que permite
+ una mayor atenci├│n y comprensi├│n de los hechos que se presentan.</p>
+<p><a href="http://www.infografikacomunicacion.es/m/infografias-prensa/especiales/131-balon-de-oro-2012">Infografia 2</a></p>
+<h2 id="bal├│n-de-oro">Bal├│n de oro</h2>
+<p>La presente infograf├¡a versa sobre los resultados del Bal├│n de Oro de la FIFA de 2012. En ella, se muestra a los tres mejores jugadores de esa temporada y se indica si han quedado en prim
+ero, segundo o tercer puesto. Fue creada en el a├▒os 2012 por L┬┤Equipe/FIFA y, a d├¡a de hoy, a pesar del tiempo que ha pasado, sigue resultando ├║ltil y visualmente atractiva para conocer lo
+s resultados de las votaciones de aquella temporada.</p>
+<ol type="1">
+<li><p>Empezando por el final, se muestra al tercer finalista, <strong>Andr├®s Iniesta</strong>, ganador del bal├│n de bronce. Se indica su nacionalidad, por el equipaje que porta en la fotogr
+af├¡a y su club, pues aparece el escudo del FCB a su lado. Bajo ├®l, su edad, trayectoria y palmar├®s, se muestran en una tabla sencilla de tono rojizo, debido al club en el que juega el centr
+ocampista. Asimismo, nos aporta los motivos por los que el jugador ha sido galardonado con ese trofeo, incluyendo, adem├ís, el porcentaje de votos obtenido en la elecci├│n, un <strong>10.91%</
+strong></p></li>
+<li><p>En segundo lugar se posiciona <strong>Cristiano Ronaldo</strong>, con el <strong>23,68%</strong> de los votos. Al igual que en el caso anterior, se indican su club, nacionalidad, edad,
+trayectoria y palmar├®s. Como en el caso de sus compa├▒eros de profesi├│n, se hace uso de la negrita para resaltar los t├¡tulos que ha ganado el portugu├®s a lo largo de su carrera futbol├¡sti
+ca.</p></li>
+<li><p>Por ├║ltimo, en el centro, y protagonizando la infograf├¡a, se encuentra <strong>Leo Messi</strong>, ganador por cuarto a├▒o consecutivo del ansiado trofeo. Al igual que en el caso de s
+us compa├▒eros, se indican su edad, nacionalidad, club y palmar├®s. En este caso, el futbolista argentino obtuvo el <strong>41,60%</strong> de los votos.</p></li>
+</ol>
+<p>Se trata de una infograf├¡a bastante f├ícil de entender, pero con una gran cantidad de detalles, lo que hace que se obtengan numerosos datos de manera r├ípida y sencilla. Mediante im├ígenes
+ y tablas, se logra una explicaci├│n de los ganadores bastante acertada.</p>
+
+<h2 id="mi-historia-de-periodismo-de-datos">Mi historia de periodismo de datos</h2>
+<h3 id="visualizaci├│n-poblaci├│n-canaria-por-edad-2019">Visualizaci├│n poblaci├│n canaria por edad (2019)</h3>
+<p>La base de datos utilizada para la creaci├│n del proyecto fue <strong>Poblaci├│n por sexo, islas y edad (grupos quinquenales)</strong>, cuya fuente es el <strong>INE</strong> (<em>Instituto
+ Nacional de Estad├¡stica</em>).</p>
+<p>En ├®l, se condensaban los datos relativos a esos aspectos, con <strong>todas las islas espa├▒olas</strong>, divisi├│n por sexos y edad. Sin embargo, para realizar la infograf├¡a solo se tu
+vieron en cuenta los datos referidos a las <strong>Islas Canarias</strong>, ignorando la variante del sexo y utilizando ├║nicamente el total de poblaci├│n por cada rango de edad.</p>
+<p>Una vez escogida la <strong>base de datos</strong> y descargada del INE en <strong>formato CSV</strong> se procedi├│ al vertido de los mismo en <strong>Open Refine</strong>. All├¡, mediante
+ un proceso de limpieza, se descartaron los datos que eran innecesarios para realizar nuestra visualizaci├│n. Se utilizaron, para ello, herramientas como el <strong>filtro de texto</strong> o,
+ a un nivel m├ís general, la <strong>eliminaci├│n de columnas y celdas</strong> que no eran necesarias para completar el proceso.</p>
+<p>Una vez terminada esta fase se procedi├│ a la creaci├│n de la visualizaci├│n en <strong>DataWrapper</strong>, momento en el que se arreglaron algunos aspectos. Una vez se hubo comprobado qu
+e los datos eran correctos, se avanz├│ hasta el apartado de <em>ÔÇ£VisualizeÔÇØ</em>, momento en el que se escoge el formato y dem├ís aspectos de nuestro proyecto.</p>
+<p>Tras probar diferentes formatos, se opt├│ por el de <strong>barras</strong>, debido a la idoneidad con la que presenta los datos escogidos, pues se ven, de manera sencilla y esquem├ítica la
+s cifras aportadas. Tras a├▒adir el <strong>t├¡tulo</strong> y una breve <strong>descripci├│n</strong>, se procedi├│ a la elecci├│n del <strong>color</strong>, en este caso de un tono salm├│n,
+ cuyo c├│digo en la aplicaci├│n es: ÔÇ£#ff8658ÔÇØ.</p>
+<p>Finalmente, despu├®s de haber dado por terminado el proceso de producci├│n, se llev├│ a cabo su <strong>publicaci├│n</strong>, dando como resultado final la visualizaci├│n presentada.</p>
+<p>Por ├║ltimo, con el fin de publicar la inograf├¡a en <strong>Github</strong>, se accedi├│ desde la <strong>terminal</strong> a este repositorio, realizando en <strong>nano</strong> el prese
+nte texto y a├▒adiendo la visualizaci├│n.</p>
+<figure>
+<img src="https://user-images.githubusercontent.com/90326392/143773639-1a32e9e0-6219-4194-a8d8-7f82b76b9e56.png" alt="ZNSXs-poblaci-n-de-canarias-por-edad" /><figcaption aria-hidden="true">ZNS
+Xs-poblaci-n-de-canarias-por-edad</figcaption>
+</figure>
+
+
     <h1 class="mt-5">Sticky footer with fixed navbar</h1>
     <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code class="small">padding-top: 60px;</code> on the <code class="small">main &gt; .container</code>.</p>
     <p>Back to <a href="../examples/sticky-footer/">the default sticky footer</a> minus the navbar.</p>
